[package]
name = "skeleton"
version = "0.3.0"
authors = ["Valentin Brandl <vbrandl@riseup.net>"]
description = "Skeleton project manager"
homepage = "https://github.com/ntzwrk/skeleton"
repository = "https://github.com/ntzwrk/skeleton"
readme = "README.md"
license = "MIT"

build = "build.rs"

[badges]
travis-ci = { repository = "ntzwrk/skeleton", branch = "master" }

[dependencies]
toml = "0.3"
serde = "0.9"
serde_derive = "0.9"
clap = "2.22"
hyper = "0.10"
hyper-native-tls = "0.2"

[build-dependencies]
clap = "2.22"

[profile.release]
lto = true
panic = 'abort'
