[package]
name = "skeleton"
version = "0.3.3"
authors = ["Valentin Brandl <vbrandl@riseup.net>"]
description = "Skeleton project manager"
homepage = "https://github.com/ntzwrk/skeleton"
repository = "https://github.com/ntzwrk/skeleton"
readme = "README.md"
license = "MIT"

build = "build.rs"

[badges]
travis-ci = { repository = "ntzwrk/skeleton", branch = "master" }

[dependencies]
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
clap = "2.24"
hyper = "0.10"
hyper-native-tls = "0.2"
clippy = {version = "0", optional = true}

[build-dependencies]
clap = "2.22"

[profile.release]
lto = true
panic = 'abort'

[features]
default = []
